# biotechware-bot-checker

./: .gitignore  Cargo.toml
src/: biotechware.rs  main.rs  telegram.rs
src/biotechware/: models.rs
src/telegram/: models.rs
