[package]
name = "biotechware-bot-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164",  features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"